[package]
name = "rust-nes"
version = "0.1.0"
authors = ["ltzz <ltzz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.46"
regex = "1.4.2"
wasm-bindgen = "0.2.69"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'ImageData',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console'
]
